// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking the button shows dropdown 1`] = `
<ul
  aria-label="options dropdown"
  class="flex flex-col min-w-72 z-dropdown shadow-md  bg-colorBgLayerFloat border-neutral p-1 py-2 rounded "
  role="menu"
  tabindex="0"
>
  <li
    role="presentation"
  >
    <ul
      aria-label="misc section"
      class="p-0 list-outside"
      role="group"
    >
      <li
        aria-disabled="false"
        aria-label="new note"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="NewNote"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          New note
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="new workspace"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="NewWorkspace"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          New workspace
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="switch workspace"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="SwitchWorkspace"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Switch workspace
          </span>
          <span
            class="inline B-ui-components_pretty-keybinding text-colorNeutralTextSubdued"
          >
            <kbd
              class="px-1 font-sans capitalize rounded-sm B-ui-components_pretty-keybinding-kbd"
            >
              Ctrl
            </kbd>
            <kbd
              class="px-1 font-sans capitalize rounded-sm B-ui-components_pretty-keybinding-kbd"
            >
              ⇧
            </kbd>
            <kbd
              class="px-1 font-sans capitalize rounded-sm B-ui-components_pretty-keybinding-kbd"
            >
              p
            </kbd>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="mx-1 my-2 border-t-1 border-colorNeutralBorder"
    role="separator"
  />
  <li
    role="presentation"
  >
    <ul
      aria-label="ui section"
      class="p-0 list-outside"
      role="group"
    >
      <li
        aria-disabled="false"
        aria-label="Switch Dark/Light theme"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="ToggleTheme"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          Switch Dark/Light theme
        </span>
      </li>
    </ul>
  </li>
  <li
    class="mx-1 my-2 border-t-1 border-colorNeutralBorder"
    role="separator"
  />
  <li
    role="presentation"
  >
    <ul
      aria-label="palettes"
      class="p-0 list-outside"
      role="group"
    >
      <li
        aria-disabled="false"
        aria-label="notes palette"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="NotesPalette"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Notes palette
          </span>
          <span
            class="inline B-ui-components_pretty-keybinding text-colorNeutralTextSubdued"
          >
            <kbd
              class="px-1 font-sans capitalize rounded-sm B-ui-components_pretty-keybinding-kbd"
            />
          </span>
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="operation palette"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="ActionPalette"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Operation palette
          </span>
          <span
            class="inline B-ui-components_pretty-keybinding text-colorNeutralTextSubdued"
          >
            <kbd
              class="px-1 font-sans capitalize rounded-sm B-ui-components_pretty-keybinding-kbd"
            />
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="mx-1 my-2 border-t-1 border-colorNeutralBorder"
    role="separator"
  />
  <li
    role="presentation"
  >
    <ul
      aria-label="links section"
      class="p-0 list-outside"
      role="group"
    >
      <li
        aria-disabled="false"
        aria-label="whats new"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="WhatsNewKey"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Whats new
          </span>
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="report issue"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="ReportIssue"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Report issue
          </span>
          <svg
            class="w-5 h-5"
            fill="none"
            viewBox="0 0 320 320"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M237.44 235.98c24.29-24.72 40.6-53.21 47.18-79.5 6.54-26.17 3.59-51.14-12.26-67.28-15.86-16.14-40.4-19.13-66.1-12.48-25.84 6.7-53.84 23.3-78.12 48.01-24.29 24.72-40.6 53.21-47.17 79.5-6.55 26.18-3.6 51.14 12.26 67.28 15.85 16.14 40.39 19.13 66.1 12.48 25.83-6.7 53.83-23.3 78.11-48.01Z"
              stroke="#000"
              stroke-width="10"
            />
            <path
              d="M230.93 231.25c24.29-24.72 40.6-53.22 47.17-79.5 6.55-26.18 3.6-51.14-12.26-67.28-15.85-16.14-40.38-19.14-66.1-12.48-25.83 6.69-53.83 23.3-78.11 48-24.29 24.72-40.6 53.22-47.17 79.51-6.55 26.17-3.6 51.14 12.26 67.27 15.85 16.14 40.38 19.14 66.1 12.48 25.83-6.69 53.83-23.29 78.11-48Z"
              stroke="#000"
              stroke-width="10"
            />
            <path
              d="M225.35 226.51c24.29-24.71 40.6-53.21 47.17-79.5 6.54-26.17 3.6-51.14-12.26-67.28-15.85-16.13-40.39-19.13-66.1-12.47-25.83 6.69-53.83 23.29-78.12 48-24.28 24.72-40.6 53.22-47.17 79.5-6.54 26.18-3.6 51.14 12.26 67.28s40.4 19.14 66.1 12.48c25.84-6.69 53.84-23.3 78.12-48Z"
              stroke="#000"
              stroke-width="10"
            />
            <path
              d="M223.5 224.62c24.28-24.72 40.59-53.21 47.16-79.5 6.54-26.18 3.6-51.14-12.26-67.28-15.85-16.14-40.39-19.14-66.1-12.48-25.83 6.7-53.83 23.3-78.12 48.01-24.28 24.72-40.6 53.21-47.17 79.5-6.54 26.17-3.6 51.14 12.26 67.28s40.4 19.13 66.1 12.48c25.84-6.7 53.84-23.3 78.12-48.01Z"
              stroke="#7FCEEE"
              stroke-width="10"
            />
            <path
              d="M216.98 219.88c24.28-24.71 40.6-53.2 47.17-79.5 6.54-26.17 3.6-51.14-12.26-67.27-15.86-16.14-40.39-19.14-66.1-12.48-25.83 6.69-53.83 23.3-78.12 48-24.28 24.72-40.6 53.22-47.17 79.51-6.54 26.17-3.6 51.14 12.26 67.27 15.86 16.14 40.39 19.14 66.1 12.48 25.84-6.69 53.83-23.29 78.12-48Z"
              stroke="#7FCEEE"
              stroke-width="10"
            />
            <path
              d="M213.26 216.1c24.28-24.72 40.6-53.22 47.17-79.5 6.54-26.18 3.6-51.14-12.26-67.28s-40.39-19.14-66.1-12.48c-25.83 6.7-53.83 23.3-78.12 48-24.28 24.72-40.6 53.22-47.17 79.51-6.54 26.17-3.6 51.14 12.26 67.28 15.86 16.13 40.39 19.13 66.1 12.48 25.84-6.7 53.83-23.3 78.12-48.01Z"
              stroke="#7FCEEE"
              stroke-width="10"
            />
            <path
              d="M207.68 211.36c24.28-24.71 40.6-53.2 47.17-79.5 6.54-26.17 3.6-51.14-12.26-67.27-15.86-16.14-40.4-19.14-66.1-12.48-25.84 6.69-53.84 23.29-78.12 48-24.29 24.72-40.6 53.22-47.17 79.5-6.54 26.18-3.6 51.15 12.26 67.28 15.86 16.14 40.39 19.14 66.1 12.48 25.83-6.69 53.83-23.3 78.12-48Z"
              stroke="#7FCEEE"
              stroke-width="10"
            />
            <path
              d="M203.96 207.58c24.28-24.72 40.6-53.22 47.17-79.5 6.54-26.18 3.6-51.14-12.26-67.28s-40.4-19.14-66.1-12.48c-25.84 6.69-53.84 23.3-78.12 48-24.29 24.72-40.6 53.22-47.17 79.51-6.54 26.17-3.6 51.14 12.26 67.28 15.85 16.13 40.39 19.13 66.1 12.47 25.83-6.69 53.83-23.29 78.12-48Z"
              stroke="#7FCEEE"
              stroke-width="10"
            />
            <path
              d="M200.24 203.79c24.28-24.72 40.6-53.21 47.16-79.5 6.55-26.17 3.6-51.14-12.25-67.28-15.86-16.14-40.4-19.13-66.1-12.48-25.84 6.7-53.84 23.3-78.12 48.01-24.29 24.72-40.6 53.21-47.17 79.5-6.55 26.18-3.6 51.14 12.26 67.28 15.85 16.14 40.38 19.13 66.1 12.48 25.83-6.7 53.83-23.3 78.12-48.01Z"
              stroke="#000"
              stroke-width="10"
            />
            <path
              d="M196.51 200c24.29-24.71 40.6-53.21 47.17-79.5 6.55-26.17 3.6-51.14-12.26-67.28-15.85-16.13-40.38-19.13-66.1-12.47-25.83 6.69-53.83 23.29-78.11 48-24.29 24.72-40.6 53.22-47.17 79.5-6.55 26.18-3.6 51.15 12.26 67.28 15.85 16.14 40.38 19.14 66.1 12.48 25.83-6.69 53.83-23.3 78.11-48Z"
              stroke="#000"
              stroke-width="10"
            />
            <path
              d="M191.86 195.27c24.29-24.72 40.6-53.21 47.17-79.5 6.54-26.17 3.6-51.14-12.26-67.28-15.85-16.14-40.39-19.14-66.1-12.48-25.83 6.7-53.83 23.3-78.12 48.01-24.28 24.72-40.6 53.21-47.17 79.5-6.54 26.17-3.59 51.14 12.27 67.28 15.85 16.13 40.38 19.13 66.1 12.48 25.83-6.7 53.83-23.3 78.11-48.01Z"
              stroke="#000"
              stroke-width="10"
            />
          </svg>
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="follow twitter"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="Twitter"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Twitter
          </span>
          <svg
            class="w-5 h-5"
            fill="#1DA1F2"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
            />
          </svg>
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-label="join discord"
        class="outline-none cursor-pointer text-sm rounded-md px-2 py-1 "
        data-key="Discord"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="inline-flex justify-between w-full"
        >
          <span>
            Discord
          </span>
          <svg
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 71 55"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#a)"
            >
              <path
                d="M60.1 4.9A58.55 58.55 0 0 0 45.65.42a.22.22 0 0 0-.23.1 40.78 40.78 0 0 0-1.8 3.7 54.05 54.05 0 0 0-16.23 0 37.4 37.4 0 0 0-1.83-3.7.23.23 0 0 0-.23-.1c-5.07.87-9.92 2.4-14.45 4.48a.2.2 0 0 0-.1.08C1.58 18.73-.94 32.14.3 45.39c0 .07.05.13.1.17a58.88 58.88 0 0 0 17.72 8.96c.1.03.2 0 .25-.08a42.08 42.08 0 0 0 3.63-5.9.22.22 0 0 0-.12-.31 38.77 38.77 0 0 1-5.54-2.64.23.23 0 0 1-.02-.38l1.1-.86a.22.22 0 0 1 .23-.03 41.99 41.99 0 0 0 35.68 0 .22.22 0 0 1 .23.02c.36.3.73.59 1.1.87.13.1.12.3-.02.38a36.38 36.38 0 0 1-5.54 2.63.23.23 0 0 0-.12.32 47.25 47.25 0 0 0 3.63 5.9c.05.07.15.1.24.08 5.8-1.8 11.69-4.5 17.76-8.96.06-.04.09-.1.1-.17C72.16 30.08 68.2 16.78 60.2 5a.18.18 0 0 0-.1-.1ZM23.73 37.33c-3.5 0-6.38-3.22-6.38-7.16 0-3.95 2.82-7.16 6.38-7.16 3.58 0 6.43 3.24 6.38 7.16 0 3.94-2.83 7.16-6.38 7.16Zm23.59 0c-3.5 0-6.38-3.22-6.38-7.16 0-3.95 2.82-7.16 6.38-7.16 3.58 0 6.43 3.24 6.38 7.16 0 3.94-2.8 7.16-6.38 7.16Z"
                fill="#5865F2"
              />
            </g>
          </svg>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders correctly 1`] = `
<div>
  <div>
    <button
      aria-label="options menu"
      aria-pressed="false"
      class="text-lg font-600 h-11 min-w-12 px-4  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
      style="background-color: transparent; border-radius: 0; padding: 0px;"
      type="button"
    >
      <span
        class="flex flex-grow-1 overflow-hidden "
        style="justify-content: center;"
      >
        <span>
          <svg
            class="w-7 h-7  "
            fill="currentColor"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="#ff13dc"
              height="18"
              opacity="0"
              width="18"
            />
            <path
              d="M16.45,7.8965H14.8945a5.97644,5.97644,0,0,0-.921-2.2535L15.076,4.54a.55.55,0,0,0,.00219-.77781L15.076,3.76l-.8365-.836a.55.55,0,0,0-.77781-.00219L13.4595,2.924,12.357,4.0265a5.96235,5.96235,0,0,0-2.2535-.9205V1.55a.55.55,0,0,0-.55-.55H8.45a.55.55,0,0,0-.55.55V3.106a5.96235,5.96235,0,0,0-2.2535.9205l-1.1-1.1025a.55.55,0,0,0-.77781-.00219L3.7665,2.924,2.924,3.76a.55.55,0,0,0-.00219.77781L2.924,4.54,4.0265,5.643a5.97644,5.97644,0,0,0-.921,2.2535H1.55a.55.55,0,0,0-.55.55V9.55a.55.55,0,0,0,.55.55H3.1055a5.967,5.967,0,0,0,.921,2.2535L2.924,13.4595a.55.55,0,0,0-.00219.77782l.00219.00218.8365.8365a.55.55,0,0,0,.77781.00219L4.5405,15.076,5.643,13.9735a5.96235,5.96235,0,0,0,2.2535.9205V16.45a.55.55,0,0,0,.55.55H9.55a.55.55,0,0,0,.55-.55V14.894a5.96235,5.96235,0,0,0,2.2535-.9205L13.456,15.076a.55.55,0,0,0,.77782.00219L14.236,15.076l.8365-.8365a.55.55,0,0,0,.00219-.77781l-.00219-.00219L13.97,12.357a5.967,5.967,0,0,0,.921-2.2535H16.45a.55.55,0,0,0,.55-.55V8.45a.55.55,0,0,0-.54649-.55349ZM11.207,9A2.207,2.207,0,1,1,9,6.793H9A2.207,2.207,0,0,1,11.207,9Z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders mobile correctly 1`] = `
<div>
  <div>
    <button
      aria-label="options menu"
      aria-pressed="false"
      class="text-sm font-600 h-8 min-w-8 px-2  select-none inline-flex justify-center items-center rounded-md whitespace-nowrap overflow-hidden py-1 transition-all duration-100 cursor-pointer "
      style="background-color: transparent;"
      type="button"
    >
      <span
        class="flex flex-grow-1 overflow-hidden "
        style="justify-content: center;"
      >
        <span>
          <svg
            class="w-5 h-5  "
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;
